--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -24,6 +24,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:src="@drawable/ic_add_black_24dp"
         app:backgroundTint="@color/colorGrayLight"
         app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
