--- a/app/src/main/res/layout/fragment_edit_bike.xml
+++ b/app/src/main/res/layout/fragment_edit_bike.xml
@@ -24,33 +24,29 @@
 
     <TextView
         android:id="@+id/edit_name"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="234dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="210dp"
+        android:hint="@string/edit_bike_name"
+        android:textAlignment="center"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/address_view"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="234dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:hint=""
+        android:textAlignment="center"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_name" />
-
-    <TextView
-        android:id="@+id/latlng_view"
-        android:layout_width="200dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/address_view" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_bike_deviceID" />
 
     <ImageView
         android:id="@+id/battery_view"
@@ -59,7 +55,7 @@
         android:layout_marginStart="131dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="40dp"
-        android:contentDescription="@string/save_string"
+        android:contentDescription="@string/edit_bike_save"
         android:src="@drawable/ic_battery_full_black_24dp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,23 +67,21 @@
         android:id="@+id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="167dp"
-        android:layout_marginEnd="167dp"
-        android:layout_marginBottom="40dp"
-        android:text="@string/save_string"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="40dp"
+        android:text="@string/edit_bike_save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_view_on_map" />
 
     <Button
         android:id="@+id/route_to_button"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="90dp"
-        android:text="@string/route_to"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/edit_bike_route_to"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/address_view" />
 
     <TextView
         android:id="@+id/percentage_view"
@@ -98,12 +92,36 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_back"
-        style="@android:style/Widget.Holo.Button.Small"
-        android:layout_width="wrap_content"
+        android:id="@+id/btn_view_on_map"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="@string/back_button"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="40dp"
+        android:text="@string/edit_bike_locate"
+        app:layout_constraintBottom_toTopOf="@+id/save_button"
+        app:layout_constraintEnd_toStartOf="@+id/edit_bike_ping"
+        app:layout_constraintStart_toEndOf="@+id/route_to_button"
+        app:layout_constraintTop_toBottomOf="@+id/address_view" />
+
+    <Button
+        android:id="@+id/edit_bike_ping"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="32dp"
+        android:text="@string/edit_bike_ping"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/address_view" />
+
+    <TextView
+        android:id="@+id/edit_bike_deviceID"
+        android:layout_width="234dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/edit_bike_device_id"
+        android:textAlignment="center"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
