--- a/app/src/main/res/layout/fragment_list_item.xml
+++ b/app/src/main/res/layout/fragment_list_item.xml
@@ -22,7 +22,7 @@
     <TextView
         android:id="@+id/ownerName"
         android:layout_width="175dp"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
@@ -49,14 +49,16 @@
     <TextView
         android:id="@+id/addressTextView"
         android:layout_width="162dp"
-        android:layout_height="24dp"
+        android:layout_height="30dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="23dp"
         android:layout_marginBottom="16dp"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/statusCircle"
+        app:layout_constraintHorizontal_bias="0.526"
         app:layout_constraintStart_toEndOf="@+id/picBike"
-        app:layout_constraintTop_toBottomOf="@+id/ownerName" />
+        app:layout_constraintTop_toBottomOf="@+id/ownerName"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
